tests/constructor/default_with_args.rev
struct Foo {}

var foo = Foo(1, 2, 3) // error: wrong arguments number, expected 0 but got 3